--- a/PremierTestUnreal.uproject
+++ b/PremierTestUnreal.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.0",
+	"EngineAssociation": "{DEEF5425-4FB1-701C-5FA1-4D89FD95F56E}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
