--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=EAA6F33F4C6AE8340FFA3B84B0E79EB1
-ProjectName=Third Person BP Game Template
+ProjectName=Lava-UE-Demo
+Description=Une démo unreal engine
 
 [StartupActions]
 bAddPacks=True
