Ajout d'une image pour build

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -50,3 +50,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+PackageName=com.cdhyppolite.lavaman
+
