--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,7 +2,13 @@
 ProjectID=EAA6F33F4C6AE8340FFA3B84B0E79EB1
 ProjectName=Lava-UE-Demo
 Description=Une démo unreal engine
+CompanyName=cdhyppolite
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+StagingDirectory=(Path="../../../../../../Users/e1975958/Documents/Unreal Projects/PremierTestUnreal/Build")
+BuildConfiguration=PPBC_DebugGame
+
