Remplacement logo drapeau

--- a/.gitignore
+++ b/.gitignore
@@ -77,5 +77,6 @@ DerivedDataCache/*
 Content/StarterContent/*
 Content/Characters/*
 Content/GoodSky/*
+Content/FantasyOrchestral/*
 
 !Saved/SaveGames/
